# simple_rover_locomotion

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  command_line_tests  output.cpp  package.xml
config/: exoter_poses.yaml  robot_poses.yaml  transition_poses.yaml
include/simple_rover_locomotion/: locomotion_mode.hpp  simple_rover_locomotion.hpp
launch/: control.launch.py  control.py  dummy_control.launch.py  simple_locomotion.launch.py
msg/: JointCommand.msg  JointCommandArray.msg
src/: locomotion_mode.cpp  simple_rover_locomotion.cpp
srv/: Activate.srv  ChangeLocomotionMode.srv
